<resources>
    <string name="app_name">InspectionSample</string>
    <string name="main_title">Android UI Inspection Sample</string>
    <string name="btn_xml_ui">XML UI</string>
    <string name="btn_compose_ui">Compose UI</string>
    <string name="btn_mixed_a">Mixed A</string>
    <string name="btn_mixed_b">Mixed B</string>
    <string name="btn_mixed_c">Mixed C</string>
    <string name="ui_scale_initial">UI Scale: 1.00</string>
    <string name="history_title">Work Experience</string>
    <string name="exp1_title">Senior Software Engineer - Tech Solutions Inc.</string>
    <string name="exp1_period">March 2020 - Present</string>
    <string name="exp1_desc">- Lead development of Android applications.\n- Design and implement new features.</string>
    <string name="exp2_title">Software Engineer - Innovatech Ltd.</string>
    <string name="exp2_period">July 2018 - February 2020</string>
    <string name="exp2_desc">- Developed and maintained mobile applications.\n- Collaborated with cross-functional teams.</string>
    <string name="exp3_title">Junior Developer - Startup Coders LLC</string>
    <string name="exp3_period">January 2017 - June 2018</string>
    <string name="exp3_desc">- Contributed to early-stage mobile service development.\n- Implemented features based on user feedback.</string>
    <string name="exp4_title">Software Development Intern - Future Systems Co.</string>
    <string name="exp4_period">June 2016 - December 2016</string>
    <string name="exp4_desc">- Assisted in software testing and QA processes.\n- Supported development documentation.</string>
    <string name="exp5_title">Android Developer - MobileFirst Corp.</string>
    <string name="exp5_period">May 2015 - May 2016</string>
    <string name="exp5_desc">- Focused on native Android app development.\n- Participated in code reviews and agile sprints.</string>
    <string name="exp6_title">QA Engineer - TestPerfect Inc.</string>
    <string name="exp6_period">August 2014 - April 2015</string>
    <string name="exp6_desc">- Executed test cases and reported bugs.\n- Developed automated test scripts.</string>
    <string name="exp7_title">Technical Support Specialist - HelpDesk Pro</string>
    <string name="exp7_period">January 2014 - July 2014</string>
    <string name="exp7_desc">- Provided technical assistance to customers.\n- Troubleshot software and hardware issues.</string>
    <string name="exp8_title">Web Developer (Part-Time) - Creative Web Designs</string>
    <string name="exp8_period">September 2013 - December 2013</string>
    <string name="exp8_desc">- Developed and maintained client websites.\n- Worked with HTML, CSS, and JavaScript.</string>
    <string name="exp9_title">IT Intern - Global Corp</string>
    <string name="exp9_period">June 2013 - August 2013</string>
    <string name="exp9_desc">- Assisted IT department with daily tasks.\n- Gained exposure to network administration.</string>
    <string name="exp10_title">Freelance App Developer</string>
    <string name="exp10_period">January 2012 - May 2013</string>
    <string name="exp10_desc">- Developed small mobile apps for clients.\n- Managed projects from conception to deployment.</string>
</resources>
